src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section1__test__evaluate_l1a@gene-RERE.snap
---
source: src/strucvars/eval/del/section1.rs
expression: res
---
l1:
  l1a:
    genes:
      - gene:
          hgnc_id: "HGNC:9965"
          hgnc_symbol: RERE
          ensembl_gene_id: ENSG00000142599
          ncbi_gene_id: "473"
        tx_ids:
          - NM_001042681.2
          - NM_001042682.2
          - NM_012102.4
    functional_elements:
      - refseq:
          chromosome: "1"
          start: 8877649
          stop: 8877943
          id: "id-GeneID:112590823"
          dbxref: "GeneID:112590823"
          category: CATEGORY_REGULATORY
          regulatoryClass: REGULATORY_CLASS_ENHANCER
          experiment: "EXISTENCE:reporter gene assay evidence [ECO:0000049][PMID:27701403]"
          function: activates a minimal TATA promoter and a strong SV40 promoter by Sharpr-MPRA in HepG2 and K562 cells
      - refseq:
          chromosome: "1"
          start: 8877649
          stop: 8877943
          id: "id-GeneID:112590823-2"
          dbxref: "GeneID:112590823"
          category: CATEGORY_REGION

