src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section1__test__overlapping_elements.snap
---
source: src/strucvars/eval/del/section1.rs
expression: res
---
L1:
  L1A:
    genes:
      - gene:
          hgnc_id: "HGNC:9965"
          hgnc_symbol: RERE
          ensembl_gene_id: ENSG00000142599
          ncbi_gene_id: "473"
        tx_ids:
          - NM_001042681.2
          - NM_001042682.2
          - NM_012102.4

